# ch32-hal

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  ci.sh  memory.x
.cargo/: config.toml
.github/ci/: build.sh
.github/workflows/: build-examples.yml  build.yml
examples/: adc.rs  blinky.rs  button.rs  exti.rs  sdi_print.rs  spi.rs  uart.rs  uart_echo.rs
examples/ch32l103/: Cargo.toml  README.md
examples/ch32l103/.cargo/: config.toml
examples/ch32v003/: Cargo.toml  README.md  riscv32ec-unknown-none-elf.json  rust-toolchain.toml
examples/ch32v003/.cargo/: config.toml
examples/ch32v006/: Cargo.toml  README.md  build.rs  riscv32emc-unknown-none-elf.json
examples/ch32v006/.cargo/: config.toml
examples/ch32v103/: Cargo.toml  README.md
examples/ch32v103/.cargo/: config.toml
examples/ch32v203/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
examples/ch32v203/.cargo/: config.toml
examples/ch32v208/: Cargo.toml  build.rs  libwchble.txt
examples/ch32v208/.cargo/: config.toml
examples/ch32v305/: Cargo.toml  README.md  riscv32imfc-unknown-none-elf.json
examples/ch32v305/.cargo/: config.toml
examples/ch32v307/: Cargo.toml  README.md  build.rs  riscv32imfc-unknown-none-elf.json  rust-toolchain.toml
examples/ch32v307/.cargo/: config.toml
examples/ch32x035/: Cargo.toml  README.md  build.rs
examples/ch32x035/.cargo/: config.toml
examples/ch32x035/src/: lib.rs  st7735.rs
examples/ch32x035/src/sx1268/: cmds.rs  consts.rs  mod.rs  regs.rs
examples/ch641/: Cargo.toml  README.md  riscv32ec-unknown-none-elf.json
examples/ch641/.cargo/: config.toml
examples/ch643/: Cargo.toml  README.md  build.rs
examples/ch643/.cargo/: config.toml
notes/ch32-rs/: ble-registers.md  lib-dependency-removal.md  libwchble-tmos-ll-disasm.md  t8-final-strip-plan.md  task56-postmortem.md  tmos-embassy-task-migration.md
notes/ch32-rs/ti-ble/: README.md  ble-followup-roadmap.md  branch-status.md  connectable-adv-baseline-spec.md  embedded-c-ble-stack-architecture.md  evt-broadcaster-ti-flow.md  ll-adv-scheduler-disasm.md  ll-advertise-filter-disasm.md  ll-advertise-tx-disasm.md  ll-phy-preflight-disasm.md  ll-process-event-minipass.md  ll-rx-ingress-disasm.md  ll-slave-init-disasm.md  ll-tx-completion-disasm.md  peripheral-flow-deep-dive.md  scan-rsp-implementation-spec.md  task79-attempt-log.md  time-event-model.md
notes/evidence/task68-scan-rsp-fail-a-20260510/: README.md  task68_scanrsp_20260510_2200_scanrsp_sniff60.pcap  task68_scanrsp_20260510_2204_scanrsp180_sniff180.pcap  task68_scanrsp_20260510_2309_connectloop20_sniff.pcap
src/: adc.rs  dac.rs  debug.rs  delay.rs  exti.rs  gpio.rs  i2c.rs  interrupt.rs  interrupt_ext.rs  lib.rs  macros.rs  patches.rs  peripheral.rs  peripherals.rs  pioc.rs  prelude.rs  rcc.rs  rng.rs  rt.rs  sdio.rs  signature.rs  spi.rs  traits.rs  usart.rs  usbd.rs
src/ble/: adv.rs  bb.rs  listener.rs  lle.rs  mod.rs  regint.rs  rfend.rs  runtime.rs  tracer.rs  types.rs
src/can/: can.rs  enums.rs  error.rs  frame.rs  mod.rs  registers.rs  util.rs
src/can/filter/: bit16.rs  bit32.rs  mod.rs
src/delay/: impl_qingke_v2_v4.rs  impl_qingke_v3.rs  mod.rs
src/dma/: dma_bdma.rs  mod.rs  util.rs
src/emac/: mod.rs
src/embassy/: mod.rs  time_driver_systick.rs  time_driver_tim.rs
src/eth/: generic_smi.rs  mod.rs
src/eth/_v1/: mod.rs
src/eth/v10m/: mod.rs
src/flash/: common.rs  mod.rs  other.rs  v3.rs
src/i2c/: mod.rs  slave.rs
src/internal/: drop.rs  mod.rs
src/otg_fs/: endpoint.rs  marker.rs  mod.rs
src/rcc/: ch641.rs  mod.rs  v0.rs  v003.rs  v00x.rs  v1.rs  v3.rs  x0.rs
src/timer/: complementary_pwm.rs  low_level.rs  mod.rs  simple_pwm.rs
src/usart/: mod.rs
src/usb/: mod.rs  otg_fs.rs
src/usbfs/: endpoint.rs  mod.rs
src/usbhs/: control.rs  endpoint.rs  mod.rs
src/usbpd/: mod.rs
tools/: ble_phase1_run_gate.sh  ble_phase1_verify.py
