[package]
name = "ch32-hal"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/ch32-hal"
documentation = "https://docs.rs/ch32-hal"
homepage = "https://github.com/andech32-rslf/ch32-hal"
categories = ["embedded", "no-std", "hardware-support"]
description = "HAL for the WCH's RISC-V family of microcontrollers"
keywords = ["ch32v", "risc-v", "hal"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
# ch32-metapac = { version = "0.0.5", features = [
#     "memory-x",
#     "rt",
# ], git = "https://github.com/ch32-rs/ch32-metapac.git" }
ch32-metapac = { version = "0.0.5", features = [
    "memory-x",
    "rt",
], path = "../ch32-data/build/ch32-metapac" }

qingke = { version = "0.1.10", features = ["critical-section-impl"] }
qingke-rt = "0.1.10"
# qingke-rt = { version = "0.1.10", path = "../qingke/qingke-rt" }
# qingke = { version = "0.1.10", path = "../qingke", features = ["critical-section-impl"] }


embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }
embedded-hal = { package = "embedded-hal", version = "1.0" }

critical-section = { version = "1.1.2" }
defmt = { version = "0.3.5", optional = true }
embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
embassy-time-driver = { version = "0.1.0", features = [
    "tick-hz-1_000_000",
], optional = true }
embassy-time = { version = "0.3.0", features = [
    "tick-hz-1_000_000",
], optional = true }
nb = "1.1.0"
embedded-hal-nb = "1.0.0"

rand_core = "0.6.3"

[build-dependencies]
proc-macro2 = "1.0.78"
quote = "1.0"
#ch32-metapac = { version = "0.0.5", default-features = false, features = [
#    "metadata",
#], git = "https://github.com/ch32-rs/ch32-metapac.git" }
ch32-metapac = { version = "0.0.5", default-features = false, features = [
    "metadata",
], path = "../ch32-data/build/ch32-metapac" }

[features]
default = ["embassy"]
highcode = ["qingke-rt/highcode"]
embassy = [
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-time-driver",
    "dep:embassy-time",
]
defmt = ["dep:defmt"]

# Chip-selection features
ch32v003a4m6 = ["ch32-metapac/ch32v003a4m6"]
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]
ch32v003f4u6 = ["ch32-metapac/ch32v003f4u6"]
ch32v003j4m6 = ["ch32-metapac/ch32v003j4m6"]
ch32v103c6t6 = ["ch32-metapac/ch32v103c6t6"]
ch32v103c8t6 = ["ch32-metapac/ch32v103c8t6"]
ch32v103c8u6 = ["ch32-metapac/ch32v103c8u6"]
ch32v103r8t6 = ["ch32-metapac/ch32v103r8t6"]
ch32v203c6t6 = ["ch32-metapac/ch32v203c6t6"]
ch32v203c8t6 = ["ch32-metapac/ch32v203c8t6"]
ch32v203c8u6 = ["ch32-metapac/ch32v203c8u6"]
ch32v203f6p6 = ["ch32-metapac/ch32v203f6p6"]
ch32v203f8p6 = ["ch32-metapac/ch32v203f8p6"]
ch32v203f8u6 = ["ch32-metapac/ch32v203f8u6"]
ch32v203g6u6 = ["ch32-metapac/ch32v203g6u6"]
ch32v203g8r6 = ["ch32-metapac/ch32v203g8r6"]
ch32v203k6t6 = ["ch32-metapac/ch32v203k6t6"]
ch32v203k8t6 = ["ch32-metapac/ch32v203k8t6"]
ch32v203rbt6 = ["ch32-metapac/ch32v203rbt6"]
ch32v208cbu6 = ["ch32-metapac/ch32v208cbu6"]
ch32v208gbu6 = ["ch32-metapac/ch32v208gbu6"]
ch32v208rbt6 = ["ch32-metapac/ch32v208rbt6"]
ch32v208wbu6 = ["ch32-metapac/ch32v208wbu6"]
ch32v303cbt6 = ["ch32-metapac/ch32v303cbt6"]
ch32v303rbt6 = ["ch32-metapac/ch32v303rbt6"]
ch32v303rct6 = ["ch32-metapac/ch32v303rct6"]
ch32v303vct6 = ["ch32-metapac/ch32v303vct6"]
ch32v305fbp6 = ["ch32-metapac/ch32v305fbp6"]
ch32v305gbu6 = ["ch32-metapac/ch32v305gbu6"]
ch32v305rbt6 = ["ch32-metapac/ch32v305rbt6"]
ch32v307rct6 = ["ch32-metapac/ch32v307rct6"]
ch32v307vct6 = ["ch32-metapac/ch32v307vct6"]
ch32v307wcu6 = ["ch32-metapac/ch32v307wcu6"]
ch32x033f8p6 = ["ch32-metapac/ch32x033f8p6"]
ch32x034f8p6 = ["ch32-metapac/ch32x034f8p6"]
ch32x034f8u6 = ["ch32-metapac/ch32x034f8u6"]
ch32x035c8t6 = ["ch32-metapac/ch32x035c8t6"]
ch32x035f7p6 = ["ch32-metapac/ch32x035f7p6"]
ch32x035f8u6 = ["ch32-metapac/ch32x035f8u6"]
ch32x035g8r6 = ["ch32-metapac/ch32x035g8r6"]
ch32x035g8u6 = ["ch32-metapac/ch32x035g8u6"]
ch32x035r8t6 = ["ch32-metapac/ch32x035r8t6"]
