[package]
name = "ch32l103-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32l103c8t6",
    "memory-x",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }
embassy-executor = { version = "0.7.0", features = [
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = "0.4.0"

# This is okay because we should automatically use whatever ch32-hal uses
qingke = "*"
qingke-rt = "*"

panic-halt = "1.0"
embedded-hal = "1.0.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.

[profile.dev]
opt-level = 1 # At least some opt so binary is not insane
