[package]
name = "ch32v003-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v003f4u6",
    "embassy",
    "time-driver-tim2",
    "rt",
] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
    # "task-arena-size-512", or nightly
] }
embassy-time = { version = "0.3.0" }

qingke-rt = { version = "0.2.1", features = ["highcode"] }
qingke = "0.2.0"
# qingke-rt = { version = "0.2.0", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.2.0", path = "../../../qingke" }


panic-halt = "0.2.0"

embedded-hal = "1.0.0"

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
micromath = { version = "2.1.0", features = ["num-traits"] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
