[package]
name = "ch32v003-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v003f4u6",
    "memory-x",
    "embassy",
    "time-driver-tim2",
    "rt",
] }
embassy-executor = { version = "0.6.0", features = [
    "integrated-timers",
    "arch-spin",
    "executor-thread",
    "task-arena-size-128", # or better use nightly, but fails on recent Rust versions
] }
embassy-time = { version = "0.3.0" }

# This is okay because we should automatically use whatever ch32-hal uses
qingke = "*"
qingke-rt = { version = "*", features = ["highcode"] }


panic-halt = "1.0"

embedded-hal = "1.0.0"

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
micromath = { version = "2.1.0", features = ["num-traits"] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
