[package]
name = "ch32v103-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v103r8t6",
    "memory-x",
    "rt",
    "time-driver-tim2",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-time = "0.4.0"

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "*"
qingke = "*"

# Not working for now
# defmt = "0.3"
# defmt-rtt = "0.4"

panic-halt = "1.0"

display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.1.0"


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
