[package]
name = "ch32v203-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v203g6u6",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }
#ch32-metapac = { features = [
#    "memory-x",
#    "rt",
#], path = "../../../ch32-data/build/ch32-metapac" }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0" }
embassy-usb = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }

qingke-rt = "0.2.1"
qingke = "0.2.0"
#qingke-rt = { version = "0.2.0", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.2.0", path = "../../../qingke" }

panic-halt = "0.2.0"

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
heapless = "0.8.0"
micromath = { version = "2.1.0", features = ["num-traits"] }

# mipidsi = "0.7.1"
# embedded-hal-bus = "0.1.0"


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
