[package]
name = "ch32v203-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v203g6u6",
    "memory-x",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }

embassy-executor = { version = "0.7.0", features = [
    "arch-riscv32",
    "executor-thread",
] }

embassy-time = {version = "0.4.0", features = ["tick-hz-10_000",]}
embassy-usb = { version = "0.3.0" }
embassy-futures = { version = "0.1.0" }

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "*"
qingke = "*"

panic-halt = "1.0"

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
heapless = "0.8.0"
micromath = { version = "2.1.0", features = ["num-traits"] }

# mipidsi = "0.7.1"
# embedded-hal-bus = "0.1.0"


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
