[package]
name = "ch32v208-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v208wbu6",
    "memory-x",
    "embassy",
    "rt",
], default-features = false }
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-time = "0.5.0"

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "0.6.1"
qingke = "0.6.1"

panic-halt = "1.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
