[package]
name = "ch32v208-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v208wbu6",
    "memory-x",
    "embassy",
    "rt",
], default-features = false }
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-time = "0.5.0"

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "0.7"
qingke = "0.7"

panic-halt = "1.0"
embedded-storage = "0.3.1"

embassy-net = { version = "0.8.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-net-driver = "0.2.0"
static_cell = "2.1"
embedded-io-async = "0.7"
portable-atomic = { version = "1", features = ["critical-section"] }

embassy-futures = "0.1.1"
heapless = "0.8.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
