[package]
name = "ch32v208-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v208wbu6",
    "memory-x",
    "embassy",
    "rt",
], default-features = false }
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "0.6.1"
qingke = { version = "0.6.1", features = ["unsafe-trust-wch-atomics"] }

panic-halt = "1.0"
embedded-storage = "0.3.1"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.

# Local ch32-metapac (built from ch32-rs/ch32-data working tree). Used while
# integrating CH32V208 BLE peripheral metadata before the ch32-data MR lands.
[patch."https://github.com/ch32-rs/ch32-metapac"]
ch32-metapac = { path = "../../../ch32-data/build/ch32-metapac" }
