[package]
name = "ch32v305-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v305fbp6",
    "memory-x",
    "embassy",
    "rt",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = "0.4.0"

qingke-rt = "*"
qingke = "*"

panic-halt = "1.0"

portable-atomic = { version = "1", default-features = false, features = [
    "critical-section",
] }

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.1.0"
embedded-hal = "1.0.0"
micromath = "2.1.0"
nb = "1.1.0"
heapless = { version = "0.8.0", features = ["portable-atomic"] }


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.

[profile.dev]
opt-level = 2 # At least some opt so binary size is not insane
