[package]
name = "ch32v307-examples"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "ch32v307-examples"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
ch32-hal = { path = "../../", features = ["ch32v307vct6", "embassy", "rt", "highcode", "time-driver-tim1"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = "0.3.0"
nb = "1.1.0"

qingke-rt = "0.2.1"
qingke = "0.2.0"
# qingke-rt = { version = "0.2.0", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.2.0", path = "../../../qingke" }

# Not working for now
# defmt = "0.3"
# defmt-rtt = "0.4"

panic-halt = "0.2.0"

display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
# for ssd1306
ssd1306 = "0.9"


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
