[package]
name = "ch32v307-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v307vct6",
    "embassy",
    "rt",
    "highcode",
    "time-driver-tim1",
] }
embassy-executor = { version = "0.6.0", features = [
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = "0.3.2"
nb = "1.1.0"

qingke = "0.2.0"
# qingke-rt = { version = "0.2.0", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.2.0", path = "../../../qingke" }

# Not working for now
# defmt = "0.3"
# defmt-rtt = "0.4"

panic-halt = "0.2.0"

display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
# for ssd1306
ssd1306 = "0.9"

edrv-bmp180 = "0.0.1"
embedded-hal = "1.0.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
