[package]
name = "ch32v307-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch32v307vct6",
    "memory-x",
    "embassy",
    "rt",
    "highcode",
    "time-driver-tim1",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-spin",
    "executor-thread",
] }

critical-section = "1.2.0"

embassy-time = "0.4.0"
embassy-usb = "0.5.1"
embassy-futures = "0.1.2"
nb = "1.1.0"

# This is okay because we should automatically use whatever ch32-hal uses
qingke = "*"
qingke-rt = "*"

panic-halt = "1.0"

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
# for ssd1306
ssd1306 = "0.9"

edrv-bmp180 = "0.0.1"
embedded-hal = "1.0.0"

# for usbfs_dfu
usb-dfu-target = "0.1.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
