[package]
name = "ch32x035-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = ["ch32x035f7p6", "defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }

qingke-rt = { version = "0.1.11" }
qingke = { version = "0.1.11" }
# qingke-rt = { version = "0.1.11", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.1.11", path = "../../../qingke" }

panic-halt = "0.2.0"

display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
embedded-hal = "1.0.0"
heapless = "0.8.0"


[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
