[package]
name = "ch641-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch641",
    "memory-x",
    "embassy",
    "time-driver-tim2",
    "rt",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-riscv32",
    "executor-thread",
    "task-arena-size-128", # or better use nightly, but fails on recent Rust versions
] }
embassy-time = "0.4.0"
embedded-hal = "1.0.0"

qingke-rt = "*"
qingke = "*"

panic-halt = "1.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
